--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(dataClust)
 export(dataFilter)
 export(dataLogNormalise)
 export(dataProject)
+export(dataSNN)
 export(estimateCellTypeFromProjection)
 export(plotRCAClusterComposition)
 export(plotRCAHeatmap)
