--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Description: RCA correlates single-cell gene expression data with bulk reference
 License: MIT
 Encoding: UTF-8
 LazyData: true
-Imports: BiocManager, qlcMatrix, impute, preprocessCore, GO.db, fastcluster, WGCNA, dplyr, ComplexHeatmap, circlize, umap, ggplot2, Hmisc, Matrix, methods
+Imports: BiocManager, qlcMatrix, impute, preprocessCore, GO.db, fastcluster, WGCNA, dplyr, ComplexHeatmap, circlize, umap, ggplot2, gridExtra, plotly, Hmisc, Matrix, methods, dbscan, randomcoloR, plotrix
 Depends: Matrix
 RoxygenNote: 6.1.1
