--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(dataLogNormalise)
 export(dataProject)
 export(dataSNN)
 export(estimateCellTypeFromProjection)
+export(estimateCellTypeFromProjectionPerCluster)
+export(parameterSpaceSNN)
 export(plotRCAClusterComposition)
 export(plotRCAHeatmap)
 export(plotRCAUMAP)
