--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(dataClust)
 export(dataFilter)
 export(dataLogNormalise)
 export(dataProject)
+export(dataSClust)
 export(dataSNN)
 export(estimateCellTypeFromProjection)
 export(estimateCellTypeFromProjectionPerCluster)
