Added function to plot QC parameters per cluster.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dataSNN)
 export(estimateCellTypeFromProjection)
 export(estimateCellTypeFromProjectionPerCluster)
 export(parameterSpaceSNN)
+export(plotClusterQuality)
 export(plotRCAClusterComposition)
 export(plotRCAHeatmap)
 export(plotRCAUMAP)
