Added functionality to perform cell type specific QC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(dataSNN)
 export(estimateCellTypeFromProjection)
 export(estimateCellTypeFromProjectionPerCluster)
 export(parameterSpaceSNN)
+export(performClusterSpecificQC)
 export(plotClusterQuality)
 export(plotRCAClusterComposition)
 export(plotRCAHeatmap)
