Updated package build.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,14 @@ export(dataLogNormalise)
 export(dataProject)
 export(dataSClust)
 export(dataSNN)
+export(doEnrichGo)
+export(doEnrichKEGG)
 export(estimateCellTypeFromProjection)
 export(estimateCellTypeFromProjectionPerCluster)
 export(parameterSpaceSNN)
 export(performClusterSpecificQC)
 export(plotClusterQuality)
+export(plotDEHeatmap)
 export(plotRCAClusterComposition)
 export(plotRCAHeatmap)
 export(plotRCAUMAP)
