--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(doEnrichKEGG)
 export(estimateCellTypeFromProjection)
 export(estimateCellTypeFromProjectionPerCluster)
 export(parameterSpaceSNN)
+export(parameterSpaceSeurat)
 export(performClusterSpecificQC)
 export(plotClusterQuality)
 export(plotDEHeatmap)
