--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(dataDE)
 export(dataFilter)
 export(dataLogNormalise)
 export(dataProject)
+export(dataProjectMultiPanel)
 export(dataSClust)
 export(dataSNN)
 export(doEnrichGo)
