--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,6 @@ Encoding: UTF-8
 LazyData: true
 Imports: qlcMatrix, WGCNA, dynamicTreeCut, dplyr, ComplexHeatmap, circlize, umap, gridExtra, Hmisc,  methods, ggplot2, tibble (>= 3.0.0), Seurat, gplots, irlba, doParallel, pbapply
 Depends: Matrix, R (>= 3.5.0)
-Suggests: BiocManager, ROCR, randomcoloR,fastcluster, HiClimR,  htmlwidgets,  plotrix, dbscan, plotly
+Suggests: BiocManager, ROCR, randomcoloR,fastcluster, HiClimR, htmlwidgets,  plotrix, dbscan, plotly, graphics
 biocViews: impute, preprocessCore, GO.db, edgeR, ensembldb, EnsDb.Mmusculus.v79, EnsDb.Hsapiens.v86
 RoxygenNote: 7.1.1
