Fixed Note warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,3 +28,5 @@ export(plotRCAHeatmap)
 export(plotRCAUMAP)
 export(plotRCAUMAP3D)
 exportClasses(RCA)
+importClassesFrom(Matrix,dgCMatrix)
+importFrom(methods,new)
