--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Description: Single-cell clustering by projection onto bulk reference transcript
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: qlcMatrix, WGCNA, dynamicTreeCut, dplyr, ComplexHeatmap, circlize, umap, gridExtra, Hmisc,  methods, ggplot2, tibble (>= 3.0.0), Seurat, gplots, irlba
 Depends: Matrix, R (>= 3.5.0)
-Suggests: BiocManager, ROCR, randomcoloR, fastcluster, HiClimR, htmlwidgets, plotrix, dbscan, plotly, graphics, future, pbapply, future.apply, doParallel, rlang, parallel, magrittr, utils, stringr, foreach, httr, S4Vectors, grDevices
-biocViews: impute, preprocessCore, GO.db, edgeR, ensembldb, EnsDb.Mmusculus.v79, EnsDb.Hsapiens.v86
+biocViews:  
+Imports: qlcMatrix, WGCNA, dynamicTreeCut, ComplexHeatmap, circlize, umap, gridExtra, methods, ggplot2, Seurat, irlba, EnsDb.Hsapiens.v86, EnsDb.Mmusculus.v79, clusterProfiler, edgeR, ensembldb
+Suggests: BiocManager, dplyr, ROCR, randomcoloR, fastcluster, HiClimR, htmlwidgets, plotrix, dbscan, plotly, graphics, gplots, future, pbapply, future.apply, doParallel, rlang, parallel, magrittr, utils, stringr, foreach, httr, S4Vectors, grDevices
 RoxygenNote: 7.1.1
