Added vignette template

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,34 @@ LazyData: true
 Depends: Matrix, R (>= 3.5.0)
 biocViews:
 Imports: qlcMatrix, WGCNA, dynamicTreeCut, ComplexHeatmap, circlize, umap, gridExtra, methods, ggplot2, Seurat, irlba
-Suggests: dplyr, ROCR, randomcoloR, fastcluster, HiClimR, htmlwidgets, plotrix, dbscan, plotly, graphics, gplots, future, pbapply, future.apply, doParallel, rlang, parallel, magrittr, utils, stringr, foreach, httr, S4Vectors, grDevices, clusterProfiler, edgeR
+Suggests: 
+    dplyr,
+    ROCR,
+    randomcoloR,
+    fastcluster,
+    HiClimR,
+    htmlwidgets,
+    plotrix,
+    dbscan,
+    plotly,
+    graphics,
+    gplots,
+    future,
+    pbapply,
+    future.apply,
+    doParallel,
+    rlang,
+    parallel,
+    magrittr,
+    utils,
+    stringr,
+    foreach,
+    httr,
+    S4Vectors,
+    grDevices,
+    clusterProfiler,
+    edgeR,
+    knitr,
+    rmarkdown
 RoxygenNote: 7.1.1
+VignetteBuilder: knitr
