--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,8 +40,7 @@ Suggests:
     edgeR,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0),
-    scuttle
+    testthat (>= 3.0.0)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 Config/testthat/edition: 3
